--- a/composer.json
+++ b/composer.json
@@ -8,24 +8,25 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": "^7.2.5",
+        "berkayk/onesignal-laravel": "^1.0",
+        "coraxster/flysystem-aws-s3-v3-minio": "^1.0",
+        "doctrine/dbal": "^2.11",
         "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "jenssegers/agent": "^2.6",
-        "laravel/framework": "^8.0",
-        "laravel/jetstream": "^1.5",
-        "laravel/sanctum": "^2.6",
+        "fruitcake/laravel-cors": "^1.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "livewire/livewire": "^2.0"
+        "laravel/ui": "^2.2",
+        "predis/predis": "^1.1",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.3.6",
+        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
-        "laravel/ui": "^3.0",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3"
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
@@ -39,10 +40,11 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
-        }
+            "App\\": "app/"
+        },
+        "classmap": [
+            "database/seeds"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
