--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2.5",
         "berkayk/onesignal-laravel": "^1.0",
         "coraxster/flysystem-aws-s3-v3-minio": "^1.0",
+        "cossou/jasperphp": "^2.8",
         "doctrine/dbal": "^2.11",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
