--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.10",
-        "doctrine/dbal": "^2.11",
+        "doctrine/dbal": "^2.5",
         "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.2",
-        "tymon/jwt-auth": "^1.0"
+        "laravel/ui": "^2.2"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
